# bobros

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  locks.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
